--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ name: 'Daily Binge'
 description: 'A site for reviews'
 logo: 'assets/images/logo.png'
 favicon: 'assets/images/favicon.ico'
-baseurl: ''
+baseurl: '/binge'
 disqus: ''
 email: 'siddsantham@gmail.com'
 mailchimp-list: ''
