--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ description: 'A site for reviews'
 logo: 'assets/images/logo.png'
 favicon: 'assets/images/favicon.ico'
 baseurl: '/binge'
-disqus: ''
+disqus: 'disqus_Yym4hzTy1Y'
 email: 'siddsantham@gmail.com'
 mailchimp-list: ''
 
