--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site
-name: 'Daily Binge'
+name: 'The Daily Binge'
 description: 'A site for reviews'
 logo: 'assets/images/logo.png'
 favicon: 'assets/images/favicon.ico'
